--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,8 @@ Thumbs.db
 
 # Ignore large data and outputs (optional for assignment)
 csv_files/*.csv
-outputs/*.png
-outputs/*.jpg
+#outputs/*.png
+#outputs/*.jpg
 
 # Python cache
 __pycache__/
